Bug 2001318 - Disable implicit CSS filter applied to pageAction svg icons in dark mode on Nightly builds. r=robwu,emilio,desktop-theme-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D283079

--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -586,19 +586,24 @@ toolbar[inactive="true"] .urlbar,
  * will be barely visible. For now we try to make them more visible through
  * some filtering tricks.
  *
- * TODO(emilio): Evaluate removing this. SVGs can use prefers-color-scheme to
- * determine the right color-scheme to use, see bug 1779457.
+ * TODO(Bug 2016509): disable the deprecated filter applied to the pageAction icon
+ * on all channels (extensions will be able to use prefer-color-scheme inside
+ * their SVG icons instead, see Bug 2001318 for additional context).
+ *
  */
-.urlbar-addon-page-action[style*=".svg"] > .urlbar-icon {
-  :root[lwt-toolbar-field="dark"] #urlbar:not([focused]) &,
-  :root[lwt-toolbar-field-focus="dark"] #urlbar[focused] & {
-    filter: grayscale(100%) brightness(20%) invert();
-  }
-
-  /* As above, but for the default theme in dark mode, which suffers from the same issue */
-  @media (prefers-color-scheme: dark) {
-    :root:not([lwtheme]) & {
+/* stylelint-disable-next-line media-query-no-invalid */
+@media -moz-pref("extensions.webextensions.pageActionIconDarkModeFilter.enabled") {
+  .urlbar-addon-page-action[style*=".svg"] > .urlbar-icon {
+    :root[lwt-toolbar-field="dark"] #urlbar:not([focused]) &,
+    :root[lwt-toolbar-field-focus="dark"] #urlbar[focused] & {
       filter: grayscale(100%) brightness(20%) invert();
+    }
+
+    /* As above, but for the default theme in dark mode, which suffers from the same issue */
+    @media (prefers-color-scheme: dark) {
+      :root:not([lwtheme]) & {
+        filter: grayscale(100%) brightness(20%) invert();
+      }
     }
   }
 }
